--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,12 +17,12 @@
   <h1 class="text-center">Welcome to Volunteer Connect</h1>
   <div class="text-center">
       
-      <button type="button" class="btn btn-primary">
-          <td class = "nav-item"><%= link_to 'Organizations', organizations_url %></td>
+      <button type="button" class="btn btn-primary mr-5">
+          <td class = "button-nav-item"><%= link_to 'Organizations', organizations_url %></td>
       </button>
       
-      <button type="button" class="btn btn-primary">
-          <td class = "nav-item"><%= link_to 'Events', events_url %></td>
+      <button type="button" class="btn btn-primary ml-5">
+          <td class = "button-nav-item"><%= link_to 'Events', events_url %></td>
       </button>
   </div>
 
