--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,8 +16,8 @@
     </button>
 </div>
     
-<div class="container mt-3 p-5 my-5">
-    <h1>Registered Events</h1>
+<div class="container bg-secondary mt-3 p-5 my-5">
+    <h1 style="color:white">Registered Events</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
     
         <% @user.events.each do |event| %>
