--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,32 +61,31 @@
       </button>
 
         <% end %>
-        
-      
-       
-        
+        </div>
+       </div>
+       <!--Right aligned items-->
+       <div class="navbar-nav text-right">
+
        <% if signed_in? %>
         <button type="button" class="btn">
           <a class="text-primary"><%= link_to "Hello, #{current_user.email}", users_show_path %></a>
       </button>
         <% end %>
       
+        <!-- Search bar -->
+        <%= form_tag(search_path, :method => "get") do %>
+        <div class="input-group my-2 my-lg-0">
+            <%= search_field_tag :search, params[:search], placeholder: "Search", class: "form-control my-lg-0"%>
+            <div class="input-group-btn-outline-success my-2 my-sm-0">
+                <%= button_tag "Search", :class => 'btn btn-outline-success', :name => nil%>
+            </div>
+        </div>
+        <% end %>
         
-        
-
-
-    </div>
-  </div>
+        </div>
 </nav>
 
-<%= form_tag(search_path, :method => "get") do %>
-    <div class="input-group my-lg-0">
-        <%= search_field_tag :search, params[:search], placeholder: "Search For Organizations or Events", class: "form-control my-lg-0"%>
-        <div class="input-group-btn-outline-success my-sm-0">
-            <%= button_tag "Search", :class => 'btn btn-outline-success', :name => nil%>
-        </div>
-    </div>
-<% end %>
+
   
   <body>
     <% if notice %>
