--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,8 @@
 <html lang = "en">
   
   <head>
-    <title>Volunteer Home</title>  
+    <title>Volunteer Home</title>
+      <link rel="stylesheet" type="text/css" href="custom.css">
   </head>
 <body>
 
