--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,13 @@
           <a class="nav-item"><%= link_to "Edit Information", edit_user_registration_path %></a>
     </button>
 </div>
+
+<div class="container bg-secondary mt-3 p-5 my-5">
+    <%= month_calendar do |date| %>
+      <%= date %>
+    <% end %>
+</div>
+    
     
 <div class="container bg-secondary mt-3 p-5 my-5">
     <h1 style="color:white">Registered Events</h1>
