--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-    <title>Events</title>    
-    </head>
-
+    <title>Events</title>
+  </head>
 
 
 <div class="container mt-3 p-5 my-5">
 <h1>Events</h1>
+    
+    <% @events.each do |event| %>
+       <div class="card mb-3" style="max-width: 1500px;">
+      <div class="row g-0">
+      <h5 class="card-header"> <%= event.name %> </h5>
+        <div class="col-md-3">
+           <%= image_tag "#{event.organization.image}", alt: "Photo of #{event.organization}", width: "300px", height:"200px", crop:"pad" =%>
+          </div>
+        <div class="col-md-2">
+          <div class="card-body">
+              
+                <p class="card-text"> <b>Date:</b> <%= event.date %> </p>
+                <p class="card-text"> <b>Start time:</b> <%= event.start_time %> </p>
+                <p class="card-text"> <b>End time:</b> <%= event.end_time %> </p>
+          </div>
+        </div>
+        <div class="col-md-7">
+          <div class="card-body">
+                <p class="card-text"> <%= event.description %></p>
+                <td><%= link_to image_tag("eye.jfif", size: "30"), event%></td>
+                <td><%= link_to image_tag("pencil.jfif", size: "30"), edit_event_path(event) %></td>
 
-<table class="table">
-  <thead class="table-secondary">
-    <tr>
-      <th><%= link_to "Name", :sort => "name"%></th>
-      <th><%= link_to "Date", :sort => "date"%></th>
-      <th><%= link_to "Start time", :sort => "start_time"%></th>
-      <th><%= link_to "End time", :sort => "end_time"%></th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+          </div>
+        </div>
 
-  <tbody>
+      </div>
+    </div>
+    <% end %>
+
     <div class = "container pb-5">
         <%= link_to 'New Event', new_event_path, class:"btn btn-secondary float-end" %>
     </div>  
 
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= link_to "#{event.name}", "#{event.link}", :target => '_blank', style: 'color:#0080ff;', class: 'css_class'  %></td>
-        <td><%= event.date %></td>
-        <td><%= event.start_time %></td>
-        <td><%= event.end_time %></td>
-        <td><%= link_to image_tag("eye.jfif", size: "30"), event%></td>
-        <td><%= link_to image_tag("pencil.jfif", size: "30"), edit_event_path(event) %></td>
-        <% if signed_in? %>
-            <% if event.added?(current_user) %>
-                <td><%= button_to "+", add_path(event), method: "put", class:"btn btn-primary btn-sm mb-5", disabled: true %></td>
-            <% else %>
-                <td><%= button_to "+", add_path(event), method: "put", class:"btn btn-primary btn-sm mb-5" %></td>
-            <% end %>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+    
+    
 
 
+    
 </div>
+    
+
+    
