--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,17 +5,18 @@
   </head>
 
 
-<div class="container mt-3 p-5 my-5">
+<div class="container mt-3 p-1 my-5">
 <h1>Events</h1>
     
     <% @events.each do |event| %>
        <div class="card mb-3" style="max-width: 1500px;">
-      <div class="row g-0">
       <h5 class="card-header"> <%= event.name %> </h5>
-        <div class="col-md-3">
-           <%= image_tag "#{event.organization.image}", alt: "Photo of #{event.organization}", width: "300px", height:"200px", crop:"pad" =%>
+      <div class="row g-0 align-items-start">
+        <div class="col">
+              <%= image_tag "#{event.organization.image}", alt: "Photo of #{event.organization}", class:"img-responsive", width:"300px", height:"200px", crop:"pad" =%>
+           
           </div>
-        <div class="col-md-2">
+        <div class="col-2">
           <div class="card-body">
               
                 <p class="card-text"> <b>Date:</b> <%= event.date %> </p>
@@ -23,14 +24,24 @@
                 <p class="card-text"> <b>End time:</b> <%= event.end_time %> </p>
           </div>
         </div>
-        <div class="col-md-7">
+        <div class="col-6">
           <div class="card-body">
                 <p class="card-text"> <%= event.description %></p>
-                <td><%= link_to image_tag("eye.jfif", size: "30"), event%></td>
-                <td><%= link_to image_tag("pencil.jfif", size: "30"), edit_event_path(event) %></td>
-
+                
           </div>
         </div>
+        <div class="col me-auto">
+            <%= link_to image_tag("eye.jfif", size: "30"), event%>
+            <p><%= link_to image_tag("pencil.jfif", size: "30"), edit_event_path(event) %></p>
+             <% if signed_in? %>
+             <% if event.added?(current_user) %>
+                <%= button_to "+", add_path(event), method: "put", class:"btn btn-primary btn-sm mb-5", disabled: true %></p>
+            <% else %>
+                <%= button_to "+", add_path(event), method: "put", class:"btn btn-primary btn-sm mb-5" %></p>
+            <% end %>
+        <% end %>
+          </div>
+
 
       </div>
     </div>
@@ -38,14 +49,4 @@
 
     <div class = "container pb-5">
         <%= link_to 'New Event', new_event_path, class:"btn btn-secondary float-end" %>
-    </div>  
-
-    
-    
-
-
-    
-</div>
-    
-
-    
+    </div> 
