--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
 </div>
 
 <div class="container bg-light mt-3 p-5 my-5">
-    <%= month_calendar(events: @user.events, attribute: :calDate) do |date, meetings| %>
+    <%= month_calendar(events: @user.events) do |date, meetings| %>
       <%= date.day %>
     <% meetings.each do |meeting| %>
     <div>
