--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,12 +13,12 @@
 
 <p>
   <strong>Start time:</strong>
-  <%= @event.start_time %>
+  <%= @event.start_time.strftime("%I:%M%p") %>
 </p>
 
 <p>
   <strong>End time:</strong>
-  <%= @event.end_time %>
+  <%= @event.end_time.strftime("%I:%M%p") %>
 </p>
     
 <p>
