--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,8 +39,8 @@
           <div class="card-body">
             <h4 class="card-title"> <%= event.name %> </h4>
             <p class="card-text"> <%= event.date %> </p>
-            <p class="card-text"> <strong> Start: </strong> <%= event.start_time %> </p>
-            <p class="card-text"> <strong> End: </strong> <%= event.end_time %> </p>
+            <p class="card-text"> <strong> Start: </strong> <%= event.start_time.strftime("%I:%M%p")  %> </p>
+            <p class="card-text"> <strong> End: </strong> <%= event.end_time.strftime("%I:%M%p")  %> </p>
           </div>
         </div>
         </div>
