--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -42,11 +42,12 @@
 
 <%= link_to 'Edit', edit_organization_path(@organization) %> |
 <%= link_to 'Back', organizations_path %>
-
   </div>
     <h2>My Map</h2>
     <div id="map" class="map"></div>
     <script type="text/javascript">
+
+      var results = <%=results(@organization.address)=%>;
       var map = new ol.Map({
         target: 'map',
         layers: [
@@ -55,19 +56,22 @@
           })
         ],
         view: new ol.View({
-          center: ol.proj.fromLonLat([ -90.125322, 29.945127]),
-          zoom: 17
+          center: ol.proj.fromLonLat([results[1],results[0]]),
+          zoom: 15
         })
       });
+      
        var layer = new ol.layer.Vector({
      source: new ol.source.Vector({
          features: [
              new ol.Feature({
-                 geometry: new ol.geom.Point(ol.proj.fromLonLat([ -90.125322, 29.945127]))
+                 geometry: new ol.geom.Point(ol.proj.fromLonLat([results[1],results[0]]))
              })
          ]
      })
+
  });
+
  map.addLayer(layer);
     </script>
 </body>
