--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -44,7 +44,9 @@
 <%= link_to 'Back', organizations_path %>
   </div>
     <h2 class = "text-center">Find your way there!</h2>
-    <div id="map" class="map"></div>
+    <div class = "container p-5 my-5">
+        <div id="map" class="map"></div>
+    </div>
     <script type="text/javascript">
 
       var results = <%=results(@organization.address)=%>;
