--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,26 +7,27 @@
   </head>
 <body>
     
+<div class="container pt-3">
+  
+  <h1 class="text-center">Welcome to Volunteer Connect</h1>
+<!--   <div class="text-center">
+      
+        <%= link_to 'Organizations', organizations_path, class:"btn btn-primary" %>
+      
 
-<center class = "container p-5">
+        <%= link_to 'Events', events_path, class:"btn btn-secondary" %>
+ 
+  </div> -->
+</div>
+    
+<center class = "container p-5 ">
     <%= image_tag "vc.png", alt: "Homepage logo with two smiling faces" =%>
 
 </center>
 
 
 
-<div class="container p-5 my-5 bg-light text-dark">
-  
-  <h1 class="text-center">Welcome to Volunteer Connect</h1>
-  <div class="text-center">
-      
-        <%= link_to 'Organizations', events_path, class:"btn btn-primary" %>
-      
-
-        <%= link_to 'Events', events_path, class:"btn btn-secondary" %>
- 
-  </div>
-</div>
+<div class="container bg-light p-5 mb-4">
 <h1 class="text-center">Volunteering in Action!</h1>   
 <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
@@ -39,20 +40,20 @@
   </div>
 
   <!-- The slideshow/carousel -->
-  <div class="carousel-inner">
+  <div class="carousel-inner" style=" width:100%; height: 500px !important;">
     <div class="carousel-item active">
         <div class="d-flex justify-content-center">
-          <%= image_tag "codenola.jfif", alt: "Homepage logo with two smiling faces",style: 'max-height: 32rem;' =%>
+          <%= image_tag "codenola.jfif", alt: "Homepage logo with two smiling faces",style: 'max-height: 32rem;', height:"500px", crop:"pad" =%>
         </div>
     </div>
     <div class="carousel-item">
         <div class="d-flex justify-content-center">
-          <%= image_tag "grow_dat.jfif", alt: "Homepage logo with two smiling faces",style: 'max-height: 32rem;' =%>
+          <%= image_tag "grow_dat.jfif", alt: "Homepage logo with two smiling faces",style: 'max-height: 32rem;', height:"500px", crop:"pad"  =%>
         </div>     
     </div>
     <div class="carousel-item">
         <div class="d-flex justify-content-center">
-          <%= image_tag "greenlight.jpg", alt: "Homepage logo with two smiling faces",style: 'max-height: 32rem;' =%>
+          <%= image_tag "greenlight.jpg", alt: "Homepage logo with two smiling faces",style: 'max-height: 32rem;', height:"500px", crop:"pad"  =%>
         </div>
     </div>
   </div>
@@ -65,7 +66,7 @@
     <span class="carousel-control-next-icon"></span>
   </button>
 </div>  
-
+    </div>
   
 </body>
 </html>
